# wkafka

./: CITATION.cff  LICENSE  README.md  publish.sh  publish_version.py  pyproject.toml  requirements.txt  setup.py
enviroment/: Makefile  docker-compose.yml
example/: consumer.py  receive.py  send_image.py  send_json.py  send_video.py
example/basic/: consumer.py  producer.py  receive.py  send_image.py  send_json.py  send_video.py
example/in_docker/: Dockerfile  basic.py  docker-compose.yml  microservice.py  read_respond.py  requirements.txt  send_to_docker.py  wkafka copy.py  wkafka.py
wkafka/: __init__.py
wkafka/controller/: __init__.py  wkafka.py
