[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wkafka"
version = "0.2.0"
authors = [
    { name="wisrovi", email="wisrovi.rodriguez@gmail.com" },
]
description = "Pipeline con API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.dependencies]
loguru = "*"
toml = "*"
setuptools = "*"
opencv-python = "*"
kafka-python = "*"
rich = "*"
loguru = "*"
requests = "*"
numpy = "*"
pillow = "*"
python-snappy = "*"


[project.urls]
"Homepage" = "https://github.com/wisrovi/wkafka"
"Bug Tracker" = "https://github.com/wisrovi/wkafka/issues"
